# clamnotif

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install  package  release  run  setup.cfg  twine  version
bash/: clamday  dailynotif  dailyscan  welcome
src/clamnotif/: __init__.py  __main__.py  checkcfg.py  checkreport.py  clamreport.py  config.py  default.py  echo.py  lastlog.py  messenger.py  report_repository.py  reportreader.py  terminal.py  testsmtp.py  timeutils.py  welcome.py
src/test/: __init__.py  test_checkcfg.py  test_checkreport.py  test_clamreport.py  test_config.py  test_lastlog.py  test_messenger.py  test_report_repository.py  test_reportreader.py  test_terminal.py  test_testsmtp.py  test_timeutils.py  test_welcome.py  testutils.py
src/test/sample/: clamnotif-sample.cfg  lastlog-null.json  lastlog.json
src/test/sample/clamav_report/mixed/: clamnotif-sample.cfg
