[metadata]
name = clamnotif
version = file: src/clamnotif/_version.txt
author = PiSoft Company Ltd.
author_email = developer@pisoft.com.mo
description = A handy and simple tool for sending ClamAV notifications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pisoftmacao/clamnotif
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.package_data]
clamnotif = _version.txt

[options.packages.find]
where = src

[egg_info]
egg_base = tmp
